--- a/appState.json
+++ b/appState.json
@@ -1,21 +1,21 @@
 {
   "EDITOR_STATE": {
     "allProjectFiles": {
-      "a218ae7f-cc5c-4a61-a092-befa0eb5dc06": {
-        "id": "a218ae7f-cc5c-4a61-a092-befa0eb5dc06",
+      "00612acc-9c68-4451-9bf4-0c39aea8ee60": {
+        "id": "00612acc-9c68-4451-9bf4-0c39aea8ee60",
         "parent": null,
         "name": "serverless-secured-api",
         "type": "DIRECTORY",
         "isDirectory": true,
         "children": [
-          "36bde104-e671-4efe-b2a5-7670a417da57"
+          "cf4a1799-395b-4f50-9658-302712ee011e"
         ],
         "isRemovable": false,
         "filePath": "serverless-secured-api"
       },
-      "36bde104-e671-4efe-b2a5-7670a417da57": {
-        "id": "36bde104-e671-4efe-b2a5-7670a417da57",
-        "parent": "a218ae7f-cc5c-4a61-a092-befa0eb5dc06",
+      "cf4a1799-395b-4f50-9658-302712ee011e": {
+        "id": "cf4a1799-395b-4f50-9658-302712ee011e",
+        "parent": "00612acc-9c68-4451-9bf4-0c39aea8ee60",
         "name": "handler.js",
         "type": "JS_LAMBDA",
         "isDirectory": false,
@@ -35,21 +35,18 @@
             "resourceName": "apigusEast1securedGreetergreetget",
             "config": {}
           }
-        ]
+        ],
+        "testCases": {
+          "d98b4097-5469-4975-9075-7cd689ed8cdd": {
+            "id": "d98b4097-5469-4975-9075-7cd689ed8cdd",
+            "name": "Unnamed event",
+            "functionId": "cf4a1799-395b-4f50-9658-302712ee011e",
+            "event": "{\n    \"key1\": \"value1\",\n    \"key2\": \"value2\",\n    \"key3\": \"value3\"\n}"
+          }
+        }
       },
-      "3fc70a42-37a1-428f-b6c6-4816a3e13124": {
-        "id": "3fc70a42-37a1-428f-b6c6-4816a3e13124",
-        "parent": null,
-        "name": "README.md",
-        "type": "MARKDOWN_FILE",
-        "isDirectory": false,
-        "children": [],
-        "isRemovable": true,
-        "filePath": "README.md",
-        "code": "# Serverless secured API\n\nServerless service which showcases how to build an API which is accessible through an API key.\n\n## Installation\n\nMake sure that you use Serverless v1.\n\n1. Run `serverless install --url https://github.com/pmuens/serverless-secured-api` to install the service in your current working directory\n2. Next up cd into the service with `cd serverless-secured-api`\n3. Deploy with `serverless deploy`\n\n## How to use\n\nSimply perform a request against the exposed endpoint:\n\nThis request should return `Forbidden`:\n\n```bash\ncurl https://XXXX.execute-api.region.amazonaws.com/dev/greet\n```\n\nWhereas this one should suceeds:\n(you get the API key in the info output after a successfull deployment or if you run `serverless info`)\n\n```bash\ncurl https://XXXX.execute-api.region.amazonaws.com/dev/greet --header \"x-api-key: <api-key>\"\n```\n\n## AWS services used\n\n- Lambda\n- API Gateway\n"
-      },
-      "64ffa961-0c12-498f-8c9d-468d711e6236": {
-        "id": "64ffa961-0c12-498f-8c9d-468d711e6236",
+      "31c43be9-3d9f-4728-8d1d-7a6dfb9fc587": {
+        "id": "31c43be9-3d9f-4728-8d1d-7a6dfb9fc587",
         "parent": null,
         "name": "serverless.yml",
         "type": "YAML_FILE",
@@ -58,14 +55,27 @@
         "isRemovable": true,
         "filePath": "serverless.yml",
         "code": "service: serverless-secured-api\n\nprovider:\n  name: aws\n  runtime: nodejs4.3\n  region: us-east-1\n  stage: dev\n  apiKeys:\n    - secret\n\nfunctions:\n  securedGreeter:\n    handler: handler.securedGreeter\n    events:\n      - http:\n          path: greet\n          method: GET\n          private: true\n"
+      },
+      "85899508-3073-450f-9418-105f2c4913dc": {
+        "id": "85899508-3073-450f-9418-105f2c4913dc",
+        "parent": null,
+        "name": "README.md",
+        "type": "MARKDOWN_FILE",
+        "isDirectory": false,
+        "children": [],
+        "isRemovable": true,
+        "filePath": "README.md",
+        "code": "# Serverless secured API\n\nServerless service which showcases how to build an API which is accessible through an API key.\n\n## Installation\n\nMake sure that you use Serverless v1.\n\n1. Run `serverless install --url https://github.com/pmuens/serverless-secured-api` to install the service in your current working directory\n2. Next up cd into the service with `cd serverless-secured-api`\n3. Deploy with `serverless deploy`\n\n## How to use\n\nSimply perform a request against the exposed endpoint:\n\nThis request should return `Forbidden`:\n\n```bash\ncurl https://XXXX.execute-api.region.amazonaws.com/dev/greet\n```\n\nWhereas this one should suceeds:\n(you get the API key in the info output after a successfull deployment or if you run `serverless info`)\n\n```bash\ncurl https://XXXX.execute-api.region.amazonaws.com/dev/greet --header \"x-api-key: <api-key>\"\n```\n\n## AWS services used\n\n- Lambda\n- API Gateway\n"
       }
     },
     "deletedFiles": [],
-    "rootNode": "a218ae7f-cc5c-4a61-a092-befa0eb5dc06",
+    "rootNode": "00612acc-9c68-4451-9bf4-0c39aea8ee60",
     "openFiles": [
-      "36bde104-e671-4efe-b2a5-7670a417da57"
+      "cf4a1799-395b-4f50-9658-302712ee011e",
+      "31c43be9-3d9f-4728-8d1d-7a6dfb9fc587",
+      "85899508-3073-450f-9418-105f2c4913dc"
     ],
-    "currentFileId": "36bde104-e671-4efe-b2a5-7670a417da57",
+    "currentFileId": "cf4a1799-395b-4f50-9658-302712ee011e",
     "resources": {
       "apigusEast1securedGreetergreetget": {
         "type": "API_GATEWAY",
@@ -111,13 +121,14 @@
     "projectRegion": "us-east-1",
     "platform": "AWS",
     "platformRegions": {},
-    "lastSave": 1562046908494
+    "lastSave": 1564116256548
   },
   "VCS_STATE": {
     "provider": "GitHub",
     "repo": {
       "name": "serverless-secured-api",
-      "url": "https://github.com/Indunil1992/serverless-secured-api"
+      "url": "https://github.com/Indunil1992/serverless-secured-api",
+      "branches": []
     }
   }
 }
